Fixed button overflowing in mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1311,10 +1311,6 @@ img {
     padding-right: 1.4rem;
   }
 
-  .btn {
-    width: 100%;
-  }
-
   .home-hero__actions,
   .page-header__actions,
   .home-community__actions,
